Stars now show up in UWP after a XamSvg update

--- a/XamJam.Ratings/XamJam.Ratings/RatingView.xaml
+++ b/XamJam.Ratings/XamJam.Ratings/RatingView.xaml
@@ -3,7 +3,7 @@
              xmlns:mr="clr-namespace:MR.Gestures;assembly=MR.Gestures"
              xmlns:svg="clr-namespace:XamSvg.XamForms;assembly=XamSvg.XamForms"
              x:Class="XamJam.Ratings.RatingView">
-  <mr:StackLayout Orientation="Horizontal" PanningCommand="{Binding PanningCommand}" TappedCommand="{Binding TappedCommand}" Padding="{Binding Padding}" BackgroundColor="Yellow">
+  <mr:StackLayout Orientation="Horizontal" PanningCommand="{Binding PanningCommand}" TappedCommand="{Binding TappedCommand}" Padding="{Binding Padding}">
     <svg:SvgImage Svg="{Binding FirstStar.Image}" WidthRequest="32" />
     <svg:SvgImage Svg="{Binding SecondStar.Image}" WidthRequest="32"/>
     <svg:SvgImage Svg="{Binding ThirdStar.Image}" WidthRequest="32"/>
