--- a/XamJam.Demo/XamJam.Demo/View/MainView.xaml
+++ b/XamJam.Demo/XamJam.Demo/View/MainView.xaml
@@ -2,5 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamJam.Demo.View.MainView">
-  <Button Text="Image Wall" Command="{Binding ShowImageWall}"/>
+  <StackLayout>
+    <Button Text="Image Wall" Command="{Binding ShowImageWall}"/>
+  </StackLayout>
 </ContentPage>
