--- a/XamJam.Wall/WallView.xaml
+++ b/XamJam.Wall/WallView.xaml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:mr="clr-namespace:MR.Gestures;assembly=MR.Gestures"
              x:Class="XamJam.Wall.WallView">
+  <mr:AbsoluteLayout x:Name="absoluteLayout" Swiped="OnSwiped"/>
 </ContentView>
