--- a/XamJam.Demo/XamJam.Demo/View/DemoImageSingleView.xaml
+++ b/XamJam.Demo/XamJam.Demo/View/DemoImageSingleView.xaml
@@ -2,5 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamJam.Demo.View.DemoImageSingleView">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <StackLayout>
+    <Image Source="{Binding ImageSource}"/>
+    <Label Text="{Binding Text}" VerticalOptions="Center" HorizontalOptions="Center" />
+  </StackLayout>
 </ContentPage>
