--- a/XamJam.Wall/WallView.xaml
+++ b/XamJam.Wall/WallView.xaml
@@ -3,5 +3,5 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:mr="clr-namespace:MR.Gestures;assembly=MR.Gestures"
              x:Class="XamJam.Wall.WallView">
-  <mr:AbsoluteLayout x:Name="absoluteLayout" Swiped="OnSwiped"/>
+  <mr:AbsoluteLayout x:Name="AbsoluteLayout" Swiped="OnSwiped"/>
 </ContentView>
