Temporarily exposed view model like properties, e.g. MaxCacheSize, in the WallView via XAML. Need to clean this up. CacheWindow - simplified background caching, will talk it over with Caz though

--- a/XamJam.Demo/XamJam.Demo/View/DemoImageWallView.xaml
+++ b/XamJam.Demo/XamJam.Demo/View/DemoImageWallView.xaml
@@ -3,5 +3,5 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:wall="clr-namespace:XamJam.Wall;assembly=XamJam.Wall"
              x:Class="XamJam.Demo.View.DemoImageWallView">
-  <wall:WallView ViewModelCreator="{Binding ViewModelCreator}" ViewCreator="{Binding ViewCreator}" WallSizer="{Binding WallSizer}"/>
+  <wall:WallView ViewModelCreator="{Binding ViewModelCreator}" ViewCreator="{Binding ViewCreator}" WallSizer="{Binding WallSizer}" MaxCacheSize="20"/>
 </ContentView>
