--- a/XamJam.Demo/XamJam.Demo/View/DemoRatingsView.xaml
+++ b/XamJam.Demo/XamJam.Demo/View/DemoRatingsView.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:ratings="clr-namespace:XamJam.Ratings;assembly=XamJam.Ratings"
              x:Class="XamJam.Demo.View.DemoRatingsView">
@@ -8,4 +8,4 @@
     <ratings:RatingView BindingContext="{Binding RatingViewModel}"/>
     <Label Text="..."/>
   </StackLayout>
-</ContentPage>
+</ContentView>
