> Update all nugets > DemoImageWallView, use a StackLayout instead of Absolute...way easier! > DemoRatingsView Add a iOS only back button > App.xaml, set the base root navigation page to be the MainView so "Pop" always gets you back to that page > WallView, explicitly call Height and WidthRequest so that StackLayout and other layout managers can know the view's preferred size. Also, OnSizeAllocated gets called multiple times, make sure that 'UpdateViewModels' is only called once and only when the width & height change (i.e. initially and on resize)

--- a/XamJam.Demo/XamJam.Demo/View/DemoRatingsView.xaml
+++ b/XamJam.Demo/XamJam.Demo/View/DemoRatingsView.xaml
@@ -6,6 +6,10 @@
   <StackLayout>
     <Label Text="Welcome to Ratings"/>
     <ratings:RatingView BindingContext="{Binding RatingViewModel}"/>
-    <Label Text="..."/>
+    <Button Text="Back" Command="{Binding BackCommand}">
+      <Button.IsVisible>
+        <OnPlatform x:TypeArguments="x:Boolean" iOS="True" Android="False" WinPhone="False"/>
+      </Button.IsVisible>
+    </Button>
   </StackLayout>
 </ContentView>
