--- a/XamJam.Demo/XamJam.Demo/View/DemoImageWallView.xaml
+++ b/XamJam.Demo/XamJam.Demo/View/DemoImageWallView.xaml
@@ -3,12 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:wall="clr-namespace:XamJam.Wall;assembly=XamJam.Wall"
              x:Class="XamJam.Demo.View.DemoImageWallView">
-  <AbsoluteLayout>
-    <wall:WallView ViewModelCreator="{Binding ViewModelCreator}" ViewCreator="{Binding ViewCreator}" WallSizer="{Binding WallSizer}" MaxCacheSize="20" AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All"/>
-    <Button Text="back" Command="{Binding BackCommand}" BackgroundColor="White" AbsoluteLayout.LayoutBounds="0,0,10,10" AbsoluteLayout.LayoutFlags="None">
+  <StackLayout>
+    <wall:WallView VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" ViewModelCreator="{Binding ViewModelCreator}" ViewCreator="{Binding ViewCreator}" WallSizer="{Binding WallSizer}" MaxCacheSize="20"/>
+    <Button VerticalOptions="End" Text="back" Command="{Binding BackCommand}">
       <Button.IsVisible>
         <OnPlatform x:TypeArguments="x:Boolean" iOS="True" Android="False" WinPhone="False"/>
       </Button.IsVisible>
-    </Button>
-  </AbsoluteLayout>
+    </Button>      
+  </StackLayout>
 </ContentView>
