Yay! We're phasing out XamSvg. Got a star to draw with the SkiaSharp package. Next up: Gradients and Maybe Bezier Curves!

--- a/XamJam.Ratings/XamJam.Ratings/RatingView.xaml
+++ b/XamJam.Ratings/XamJam.Ratings/RatingView.xaml
@@ -2,17 +2,18 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:mr="clr-namespace:MR.Gestures;assembly=MR.Gestures"
              xmlns:svg="clr-namespace:XamSvg.XamForms;assembly=XamSvg.XamForms"
+             xmlns:ratings="clr-namespace:XamJam.Ratings;assembly=XamJam.Ratings"
              x:Class="XamJam.Ratings.RatingView">
   <mr:StackLayout Orientation="Horizontal" PanningCommand="{Binding PanningCommand}" TappedCommand="{Binding TappedCommand}" Spacing="{Binding Spacing}" HorizontalOptions="Center">
-    <svg:SvgImage Svg="{Binding FirstStar.Image}" WidthRequest="100" />
-    <svg:SvgImage Svg="{Binding SecondStar.Image}" WidthRequest="100"/>
-    <svg:SvgImage Svg="{Binding ThirdStar.Image}" WidthRequest="100"/>
-    <svg:SvgImage Svg="{Binding FourthStar.Image}" WidthRequest="100"/>
-    <svg:SvgImage Svg="{Binding FifthStar.Image}" WidthRequest="100"/>
-    <!--<svg:SvgImage Svg="{Binding FirstStar.Image}" ClickedCommand="{Binding FirstStar.TappedCommand}" />
-    <svg:SvgImage Svg="{Binding SecondStar.Image}" ClickedCommand="{Binding SecondStar.TappedCommand}" />
-    <svg:SvgImage Svg="{Binding ThirdStar.Image}" ClickedCommand="{Binding ThirdStar.TappedCommand}" />
-    <svg:SvgImage Svg="{Binding FourthStar.Image}" ClickedCommand="{Binding FourthStar.TappedCommand}" />
-    <svg:SvgImage Svg="{Binding FifthStar.Image}" ClickedCommand="{Binding FifthStar.TappedCommand}" />-->
+    <ratings:RatingStarView/>
+    <ratings:RatingStarView/>
+    <ratings:RatingStarView/>
+    <ratings:RatingStarView/>
+    <ratings:RatingStarView/>
+    <!--<svg:SvgImage Svg="{Binding FirstStar.Image}" WidthRequest="150" />
+    <svg:SvgImage Svg="{Binding SecondStar.Image}" WidthRequest="150"/>
+    <svg:SvgImage Svg="{Binding ThirdStar.Image}" WidthRequest="150"/>
+    <svg:SvgImage Svg="{Binding FourthStar.Image}" WidthRequest="150"/>
+    <svg:SvgImage Svg="{Binding FifthStar.Image}" WidthRequest="150"/>-->
   </mr:StackLayout>
-</ContentView>
+</ContentView> 
