--- a/XamJam.Ratings/XamJam.Ratings/RatingView.xaml
+++ b/XamJam.Ratings/XamJam.Ratings/RatingView.xaml
@@ -1,8 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<mr:StackLayout xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+<mr:RelativeLayout xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:mr="clr-namespace:MR.Gestures;assembly=MR.Gestures"
-             x:Class="XamJam.Ratings.RatingView"
-             Orientation="Horizontal" Spacing="{Binding Spacing}"
-             PanningCommand="{Binding PanningCommand}"
-             TappedCommand="{Binding TappedCommand}">
-</mr:StackLayout>
+             x:Class="XamJam.Ratings.RatingView">
+</mr:RelativeLayout>
