--- a/XamJam.Demo/XamJam.Demo/View/DemoRatingsView.xaml
+++ b/XamJam.Demo/XamJam.Demo/View/DemoRatingsView.xaml
@@ -5,7 +5,7 @@
              x:Class="XamJam.Demo.View.DemoRatingsView">
   <StackLayout Orientation="Vertical">
     <Label Text="Welcome to Ratings"/>
-    <ratings:RatingView Rating="{Binding Rating}" NumStars="{Binding NumStars}" HorizontalOptions="FillAndExpand" HeightRequest="100"/>
+    <ratings:RatingView Rating="{Binding Rating}" NumStars="{Binding NumStars}" HorizontalOptions="FillAndExpand" HeightRequest="100" Spacing="20"/>
     <Button Text="Back" Command="{Binding BackCommand}">
       <Button.IsVisible>
         <OnPlatform x:TypeArguments="x:Boolean" iOS="True" Android="False" WinPhone="False"/>
