Updated screen's android to fix issue #4 - droid was caching the screen size on startup instead of fetching it live. Fixed. No more support for WP8, WP8.1, Windows 8, etc. Just UWP now :) Lots of minor fixes, updated to VS2017.

--- a/XamJam.Demo/XamJam.Demo/View/MainView.xaml
+++ b/XamJam.Demo/XamJam.Demo/View/MainView.xaml
@@ -2,8 +2,9 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamJam.Demo.View.MainView">
-  <StackLayout>
-    <Button Text="Image Wall" Command="{Binding ShowImageWallCommand}"/>
-    <Button Text="Ratings" Command="{Binding ShowRatingCommand}"/>
-  </StackLayout>
+    <StackLayout>
+        <Button Text="Screen" Command="{Binding ShowScreenCommand}"/>
+        <Button Text="Image Wall" Command="{Binding ShowImageWallCommand}"/>
+        <Button Text="Ratings" Command="{Binding ShowRatingCommand}"/>
+    </StackLayout>
 </ContentView>
